--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>unirest-java</artifactId>
             <version>3.14.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
